--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,10 @@ main
     display:flex;
     align-items:center;
     justify-content:center;
+    cursor: pointer;
 }   
+
+.bg-blue
+{
+    background-color:aqua;
+}
